# 9417project-test

./: .gitignore  README.md  pyproject.toml
scripts/: _bootstrap.py  download_data.py  prepare_data.py  run_bonus_residual_agop.py  run_experiments.py  run_interpretability.py  run_scaling.py  summarize_results.py
scripts/__pycache__/: _bootstrap.cpython-312.pyc.2072087775536  download_data.cpython-312.pyc.2072087775536  prepare_data.cpython-312.pyc.2072087775536  run_experiments.cpython-312.pyc.2072087775536  run_interpretability.cpython-312.pyc.2072087857392  run_scaling.cpython-312.pyc.2072087777456  summarize_results.cpython-312.pyc.2072087777456
src/project9417/: __init__.py  datasets.py  experiment.py  gpu_runtime.py  interpretability.py  metrics.py  models.py  paths.py  preprocessing.py  registry.py  reporting.py  residual_agop.py  scaling.py  splits.py  utils.py  xrfm_compat.py
src/project9417/__pycache__/: __init__.cpython-312.pyc.2072087508240  datasets.cpython-312.pyc.2072087508240  experiment.cpython-312.pyc.2072087508240  interpretability.cpython-312.pyc.2072087857392  metrics.cpython-312.pyc.2072087508240  models.cpython-312.pyc.2072087508240  paths.cpython-312.pyc.2072087508240  preprocessing.cpython-312.pyc.2072087857392  registry.cpython-312.pyc.2072087775536  (+4 more)
tests/: test_datasets.py  test_metrics.py  test_models.py  test_preprocessing.py  test_registry.py  test_residual_agop.py  test_splits.py
tests/__pycache__/: test_metrics.cpython-312.pyc.2072087777456  test_preprocessing.cpython-312.pyc.2072087777456  test_splits.cpython-312.pyc.2072087777456
