[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comp9417-project"
version = "0.1.0"
description = "COMP9417 project pipeline for xRFM, XGBoost, and Random Forest on tabular datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cupy-cuda12x>=13.0",
    "kaggle>=1.7.4",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
    "ucimlrepo>=0.0.7",
    "xgboost>=2.1",
    "xrfm>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
